# Rust-API-Bypass-Checker

./: .gitignore  ANALYZER_SUPPORTED_FRAGMENT.md  Cargo.toml  DEMO_SCOPE.md  E2E_CASE_STUDY_EXPERIMENTS.md  EXPERIMENT_DATA_NOTES_2026-05-18.md  EXPERIMENT_DATA_NOTES_ZH_2026-05-18.md  README.md  SESSION_HANDOFF_2026-03-30.md  clean_and_run.sh  clean_and_run_checker.sh  draw.py  hkdf.md  limitations.md  target_crate_build.sh  vec_get_const_result.txt
API-counterprats/: Cargo.toml  README.md
API-counterprats/API-info/: categories_from_stdlib_catalog.md  generate_category_csvs_from_stdlib_catalog.py  generate_normalized_family_csvs.py  normalized_families.md
API-counterprats/API-info/categories_from_stdlib_catalog/: CString.csv  Result_Option.csv  Reuslt_Option.csv  String.csv  bound_nonzero.csv  buf.csv  complex.csv  index.csv  index_question.csv  intrinsic.csv  itron.csv  nonzero.csv  nullptr.csv  overflow.csv  overflow_nonzero.csv  pin.csv  slice_buf.csv  sync.csv  thread.csv  type.csv  type_nonzero.csv  vector.csv
API-counterprats/bench-results/: BENCH_AUDIT_2026-03-30.md  candidate_bench_summary_2026-03-30.csv  candidate_bench_summary_2026-03-30.json  candidate_bench_summary_by_family_2026-03-30.csv  candidate_bench_summary_compact_2026-03-30.csv  selected_bench_overview_20.csv  selected_bench_overview_o1.csv  selected_bench_overview_o2_fresh.csv  selected_bench_overview_o3.csv  selected_bench_overview_opt_sensitivity.csv  selected_bench_overview_opt_sensitivity_all.csv  selected_bench_overview_os.csv  selected_bench_overview_oz.csv
API-counterprats/benches/: as_chunks.rs  as_chunks_mut.rs  as_ref.rs  checked_add.rs  checked_add_mul.rs  checked_shl.rs  from_u32.rs  from_utf8.rs  get.rs  split_at.rs  swap.rs
API-counterprats/src/: lib.rs
micro-benchmark/: Cargo.toml  README.md
micro-benchmark/benches/: as_chunks_mut.rs  as_ref.rs  checked_add.rs  from_u32.rs  from_utf8.rs  get.rs  swap.rs
micro-benchmark/src/: callback.rs  main.rs  options.rs
src/: driver.rs  (+1 more)
(+147 files in other folders)
