[package]
name = "rust-api-bypass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-api-bypass"
path = "src/bin/cargo-api-bypass.rs"


[[bin]]
name = "api-bypass"
path = "src/bin/api-bypass.rs"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
cargo_metadata = "*"
pretty_env_logger = "0.5.0"
log = "0.4"
proc-macro2 = "1.0.95"
log-derive = "0.4.1"
failure = "0.1.8"
rug = "1.27.0"
z3-sys = "0.8.1"
itertools = "0.14.0"
lazy_static = "1.5.0"
az = "1.2.1"
serde_json = "1.0.140"
cargo-platform = "=0.3.1"
home = "=0.5.11"

[profile.release]
lto = true
