[package]
name = "micro-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
pretty_env_logger = "0.5.0"
log = "0.4"
log-derive = "0.4.1"
bytes = "1.10.1"
clap = {version = "4.5.38", features = ["derive"]}



[dev-dependencies]
criterion = "0.7"


[[bench]]
name = "get"
harness = false

[[bench]]
name = "swap"
harness = false

[[bench]]
name = "checked_add"
harness = false

[[bench]]
name = "checked_add_mul"
harness = false

[[bench]]
name = "split_at"
harness = false

[[bench]]
name = "as_chunks"
harness = false

[[bench]]
name = "as_chunks_mut"
harness = false

[[bench]]
name = "from_u32"
harness = false

[[bench]]
name = "checked_shl"
harness = false

[[bench]]
name = "as_ref"
harness = false

[[bench]]
name = "from_utf8"
harness = false